--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,31 +1,25 @@
 #-----: Application
+#------------: Application
+backend.version=${project.version}
+
 # session timeout in seconds
 spring.main.show_banner=true
 server.port=9000
 server.session-timeout=1800
 
-#-----: Log
+#------------: Log conf
 logging.config=log4j.properties
 
-#-----: Data Source
-spring.datasource.url=jdbc:mysql://localhost/backend_db
-spring.datasource.username=root
-spring.datasource.password=fender
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.maxActive=50
-spring.datasource.maxIdle=25
-spring.datasource.minIdle=25
-spring.datasource.testOnBorrow=true
-spring.datasource.validationQuery=SELECT 1
+#------------: Token conf
+cerberus.token.header=X-Auth-Token
+cerberus.token.secret=w,j[vd8iy[
+#second ext. 604800 sec = 7 days, 43200 = 12 hours
+cerberus.token.expiration=43200
 
-#spring.datasource.url=jdbc:postgresql://ec2-54-243-149-147.compute-1.amazonaws.com:5432/d3dv8eejr0kkb2?ssl=true&sslfactory=org.postgresql.ssl.NonValidatingFactory
-#spring.datasource.username=kpyxqqelcfskbm
-#spring.datasource.password=eb83UTn8Ei-lsuEp3bIjpZP4oj
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.maxActive=10
-#spring.datasource.maxIdle=5
-#spring.datasource.minIdle=5
 
-#-----:  JPA
-spring.jpa.show-sql=false
-#spring.jpa.hibernate.ddl-auto=create
+#------------: Data Source conf
+spring.data.mongodb.host=127.0.0.1
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=may
+spring.data.mongodb.password=19042528
+spring.data.mongodb.database=gambler_db
